feat: update extension to Bookmarks.Organizer v0.1 and UI changes

--- a/bm.html
+++ b/bm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TheTab.Ninja</title>
+    <title>Bookmarks.Organizer</title>
     <style>
         html, body {
             height: 100%;
@@ -135,6 +135,7 @@
             text-overflow: ellipsis;
             display: -webkit-box;
             -webkit-line-clamp: 2;
+            line-clamp: 2;
             -webkit-box-orient: vertical;
         }
         .bookmark .edit-icon,
@@ -931,11 +932,12 @@
             </div>
             <br>
             <div id="versionDisplay"></div>            
-            <a href="https://kodar.ninja" target="_blank">Created by Kodar.Ninja</a>
+            Created by Willhg72 it is a fork from "<a href="https://github.com/sandeberger/TheTab.Ninja" target="_blank">TheTab.Ninja</a>"
             </div>            
         </div>
     </div>
     <div id="bookmarkManager">
+        <h1 style="text-align: center; margin-top: 0;">Bookmarks.Organizer</h1>
         <div id="topBar">            
             <div style="display: flex; align-items: center;padding-left: 10px;">
                 <div id="dropdownContainer"></div>
