--- a/bm.html
+++ b/bm.html
@@ -890,6 +890,45 @@
             color: #fff;
         }
         /** Stilar för syncbutton /\ **/
+
+        /* Modal Styles */
+        .modal {
+            display: none; 
+            position: fixed; 
+            z-index: 1001; 
+            left: 0;
+            top: 0;
+            width: 100%; 
+            height: 100%; 
+            overflow: auto; 
+            background-color: rgba(0,0,0,0.4); 
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto; 
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 500px;
+            border-radius: 8px;
+        }
+
+        .modal-content input[type="text"], .modal-content textarea {
+            width: 100%;
+            padding: 12px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        .modal-content button {
+            width: auto;
+            padding: 10px 18px;
+            margin: 8px 4px;
+        }
     </style>
 </head>
 <body>    
@@ -956,6 +995,25 @@
     </div>    
     <div id="tabPreview" style="display:none; position:absolute; z-index:1000; background:#fff; border:1px solid #ccc; padding:5px;"></div>    
     <script src="syncbutton.js"></script>   
-    <script src="bm.js"></script>    
+    <script src="bm.js"></script>
+
+    <!-- The Modal -->
+    <div id="editBookmarkModal" class="modal">
+      <div class="modal-content">
+        <h3>Edit Bookmark</h3>
+        <input type="hidden" id="modalBookmarkId">
+        <input type="hidden" id="modalCollectionId">
+        <label for="modalBookmarkName">Name</label>
+        <input type="text" id="modalBookmarkName" placeholder="Bookmark name..">
+        <label for="modalBookmarkUrl">URL</label>
+        <input type="text" id="modalBookmarkUrl" placeholder="Bookmark URL..">
+        <label for="modalBookmarkDesc">Description</label>
+        <textarea id="modalBookmarkDesc" placeholder="Write something.." style="height:100px"></textarea>
+        <button id="saveModalBtn">Save</button>
+        <button id="cancelModalBtn">Cancel</button>
+      </div>
+    </div>
+
+    <script src="bookmark-modal.js"></script>
 </body>
 </html>
