feat: Hide GitHub sync button from UI

--- a/bm.html
+++ b/bm.html
@@ -977,6 +977,11 @@
     </div>
     <div id="bookmarkManager">
         <h1 style="text-align: center; margin-top: 0;">Bookmarks.Organizer</h1>
+        <style>
+            #dropdownContainer {
+                display: none !important;
+            }
+        </style>
         <div id="topBar">            
             <div style="display: flex; align-items: center;padding-left: 10px;">
                 <div id="dropdownContainer"></div>
